# video-create

./: .gitattributes  .gitignore  B站横屏旅行视频生成脚本_V3_操作手册.docx  B站横屏旅行视频生成脚本_V3_操作手册.md  CHANGELOG.md  CHANGE_LIST.md  PROJECT_IRON_RULES.md  README.md  Video Create Studio V5 5 章节文字动效设计分析文档.docx  Video_Create_Studio_V4_技术落地设计文档.docx  Video_Create_Studio_V4_技术落地设计文档.md  Video_Create_Studio_V5_最终工程设计文档.md  Video_Create_Studio_素材库与故事蓝图联动优化方案.docx  Video_Create_Studio_素材库与故事蓝图联动优化方案.md  index.html  make_bilibili_video_v3.py  package-lock.json  package.json  requirements.txt  tsconfig.diagnostic-check.json  video_engine_v5.py  video_engine_v5.py.v541_single_chapter.bak  video_engine_v5.py.v551_moviepy_opacity.bak  video_engine_v5.py.v56_long_stability.bak  video_engine_worker.py  vite.config.ts  ~$deo_Create_Studio_V5_最终工程设计文档.docx
docs/: AUDIO_MUSIC_STRATEGY.md  AUDIO_STABLE_MIXING_STRATEGY.md  AUTOMATED_PRO_TIMELINE_WORKBENCH_PLAN_2026_06.md  CHAPTER_TITLE_STYLE_PREVIEW_DESIGN.md  COMMERCIAL_PRODUCT_MATURITY_PLAN.md  CREATIVE_STITCHING_STRATEGY.md  DAVINCI_BENCHMARK_GAP_AND_EXECUTION_ROADMAP.md  DAVINCI_P0_EXECUTION_TASKLIST.md  ERROR_CODE_INDEX.md  INSTALLER_TEST_CHECKLIST.md  INVALIDATION_AND_RECOMPUTE_RULES.md  MLT_BACKEND_INTEGRATION_PLAN.md  MULTI_BACKEND_RENDER_ARCHITECTURE_PLAN.md  NEXT_OPTIMIZATION_PRIORITIES.md  NEXT_PROJECT_OPTIMIZATION_REVIEW_2026_06.md  NEXT_SYSTEM_OPTIMIZATION_AREAS.md  PERFORMANCE_DIAGNOSTICS.md  (+27 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+140 files in other folders)
