[package]
name = "video-create-studio"
version = "5.6.0"
description = "Desktop GUI for the Bilibili travel video generator."
authors = ["Video Create Studio"]
edition = "2021"

[lib]
name = "video_create_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
